--- a/app/src/main/res/layout/new_add_address_items.xml
+++ b/app/src/main/res/layout/new_add_address_items.xml
@@ -1,230 +1,237 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/bgcolor"
-    android:padding="0.5dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/shadow_back">
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:src="@drawable/on"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/edittextstyle"
-        android:lineSpacingMultiplier="1.2"
-        android:padding="5dip"
-        android:text="Home\nStreat abc\nBuilding 123\nAbhu Dhabhi(UAe)\nPhone Number : 8750244067"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/text_color" />
-
-
-    <!--  <TextView
-         android:id="@+id/textView2"
-         android:layout_width="100pt"
-         android:layout_height="wrap_content"
-         android:layout_alignParentRight="true"
-         android:layout_below="@+id/textView1"
-         android:layout_marginTop="4dp"
-            android:layout_marginLeft="10dp"
-           android:layout_marginRight="10dp"
-         android:background="@drawable/edittextstyle"
-         android:gravity="center|right"
-         android:text="Delete"
-         android:textAppearance="?android:attr/textAppearanceMedium" />
-  -->
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/imageView1"
-        android:layout_gravity="center"
-        android:layout_marginTop="4dp"
-        android:layout_toLeftOf="@+id/textView2"
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <!--  <TextView
-         android:id="@+id/textView4"
-          android:layout_width="100dp"
-
-         android:layout_height="wrap_content"
-         android:layout_alignBaseline="@+id/textView3"
-         android:layout_alignBottom="@+id/textView3"
-         android:layout_marginLeft="10dp"
-         android:layout_marginTop="4dp"
-         android:background="@drawable/edittextstyle"
-         android:text="Edit"
-         android:textAppearance="?android:attr/textAppearanceMedium" /> -->
-
-    <LinearLayout
-        android:id="@+id/ll"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="12dp">
 
         <ImageView
-            android:id="@+id/imageViewEdit"
+            android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|left"
-            android:layout_weight="1"
-            android:background="@drawable/buttonstyle"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:padding="5dp"
-            android:src="@drawable/ic_action_edit" />
+            android:src="@drawable/on"
+            android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/imageViewDiscard"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
-            android:layout_weight="1"
-            android:background="@drawable/buttonstyle"
-            android:gravity="center"
-            android:padding="5dp"
-            android:src="@drawable/ic_action_discard" />
-
-    </LinearLayout>
+            android:layout_below="@+id/imageView1"
+            android:lineSpacingMultiplier="1.2"
+            android:padding="5dip"
+            android:text="Home\nStreat abc\nBuilding 123\nAbhu Dhabhi(UAe)\nPhone Number : 8750244067"
+            android:textColor="@color/text_color"
+            android:textSize="12.5sp" />
 
 
-    <TextView
-        android:id="@+id/AddressID"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        <!--  <TextView
+             android:id="@+id/textView2"
+             android:layout_width="100pt"
+             android:layout_height="wrap_content"
+             android:layout_alignParentRight="true"
+             android:layout_below="@+id/textView1"
+             android:layout_marginTop="4dp"
+                android:layout_marginLeft="10dp"
+               android:layout_marginRight="10dp"
+             android:background="@drawable/edittextstyle"
+             android:gravity="center|right"
+             android:text="Delete"
+             android:textAppearance="?android:attr/textAppearanceMedium" />
+      -->
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView2"
+            android:layout_alignBottom="@+id/textView2"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_gravity="center"
+            android:layout_marginTop="4dp"
+            android:layout_toLeftOf="@+id/textView2"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/UserID"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        <!--  <TextView
+             android:id="@+id/textView4"
+              android:layout_width="100dp"
 
-    <TextView
-        android:id="@+id/AddressName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+             android:layout_height="wrap_content"
+             android:layout_alignBaseline="@+id/textView3"
+             android:layout_alignBottom="@+id/textView3"
+             android:layout_marginLeft="10dp"
+             android:layout_marginTop="4dp"
+             android:background="@drawable/edittextstyle"
+             android:text="Edit"
+             android:textAppearance="?android:attr/textAppearanceMedium" /> -->
 
-    <TextView
-        android:id="@+id/CityID"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        <LinearLayout
+            android:id="@+id/ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView1"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp">
 
-    <TextView
-        android:id="@+id/CountryID"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+            <Button
+                android:id="@+id/imageViewEdit"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical|left"
+                android:layout_marginRight="2dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_selector_img"
+                android:drawableLeft="@drawable/ic_edit"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="EDIT"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/white" />
 
-    <TextView
-        android:id="@+id/ContactNo"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+            <Button
+                android:id="@+id/imageViewDiscard"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical|right"
+                android:layout_marginLeft="1dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_selector_img"
+                android:drawableLeft="@drawable/ic_delete"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="DELETE"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/white"
+                android:typeface="monospace" />
 
-    <TextView
-        android:id="@+id/AddressLine1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/AddressLine2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/AddressLine3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        <!--<TextView-->
+        <!--android:id="@+id/AddressID"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
 
-    <TextView
-        android:id="@+id/countryName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        <!--<TextView-->
+        <!--android:id="@+id/UserID"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
 
-    <TextView
-        android:id="@+id/CityName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        <!--<TextView-->
+        <!--android:id="@+id/AddressName"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
 
-    <TextView
-        android:id="@+id/DefaultAddress"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        <!--<TextView-->
+        <!--android:id="@+id/CityID"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
 
+        <!--<TextView-->
+        <!--android:id="@+id/CountryID"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/ContactNo"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/AddressLine1"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/AddressLine2"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/AddressLine3"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/countryName"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/CityName"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/DefaultAddress"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/textView1"-->
+        <!--android:text="Large Text"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:visibility="gone" />-->
+    </RelativeLayout>
 </RelativeLayout>
