--- a/app/src/main/res/drawable/button_selector.xml
+++ b/app/src/main/res/drawable/button_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false" android:drawable="@color/btn_bgcolor_dark"/>
-    <item android:state_pressed="true" android:drawable="@color/btn_bgcolor_light"/>
+    <item android:drawable="@color/btn_bgcolor_dark" android:state_pressed="false" />
+    <item android:drawable="@color/btn_bgcolor_light" android:state_pressed="true" />
 </selector>
