--- a/app/src/main/res/drawable/custom_from_spin.xml
+++ b/app/src/main/res/drawable/custom_from_spin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:width="1dp"
-        android:color="@color/btn_bgcolor" />
+        android:width="1.5dp"
+        android:color="@color/text_dark_blue" />
+    <corners android:radius="5dp" />
 </shape>
