--- a/app/src/main/res/drawable/edit_new_style.xml
+++ b/app/src/main/res/drawable/edit_new_style.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="2.0dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/btn_bgcolor" />
+        android:color="#208da9" />
+
 </shape>
