--- a/app/src/main/res/drawable/edittextstyle.xml
+++ b/app/src/main/res/drawable/edittextstyle.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:thickness="0dp"
-       android:shape="rectangle">
-  <stroke android:width="0.5dp"
-       android:color="#4799E8"/>
-  <corners android:radius="0dp" />
-  <gradient
-   android:startColor="#FFFFFF"
-   android:endColor="#FFFFFF"
-   android:type="linear"
-   android:angle="270"/>
+    android:shape="rectangle"
+    android:thickness="0dp">
+    <stroke
+        android:width="0.5dp"
+        android:color="#4799E8" />
+    <corners android:radius="0dp" />
+    <gradient
+        android:angle="270"
+        android:endColor="#FFFFFF"
+        android:startColor="#FFFFFF"
+        android:type="linear" />
 </shape>
