--- a/app/src/main/res/drawable/list_item_bg_normal.xml
+++ b/app/src/main/res/drawable/list_item_bg_normal.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<animation-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android">
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-	  	<gradient
-	      android:startColor="@color/list_background"
-	      android:endColor="@color/list_background"
-	      android:angle="90" />
-	</shape>  
+        android:shape="rectangle">
+        <gradient
+            android:angle="90"
+            android:endColor="@color/list_background"
+            android:startColor="@color/list_background" />
+    </shape>
 
 </animation-list>
