--- a/app/src/main/res/drawable/tab_text_color_mymusic.xml
+++ b/app/src/main/res/drawable/tab_text_color_mymusic.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:state_selected="false"
-        android:color="#80FFFFFF"
-        />
-    <item
-        android:state_selected="true"
-        android:color="#FFFFFF" />
+    <item android:color="#80FFFFFF" android:state_selected="false" />
+    <item android:color="#FFFFFF" android:state_selected="true" />
 </selector>
