--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,34 +3,36 @@
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
     android:layout_gravity="center"
-    android:gravity="center"
     android:background="@drawable/splash_back"
+    android:gravity="center"
     android:padding="40dp"
     android:paddingBottom="50dp">
 
     <ImageView
         android:id="@+id/image_icon_login"
-        android:src="@drawable/ic_ico_high"
-        android:layout_centerHorizontal="true"
         android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_ico_high" />
+
     <TextView
         android:id="@+id/textview_login_title"
-        android:layout_below="@+id/image_icon_login"
         android:layout_width="match_parent"
-        android:text="SPOT MY LAUNDRY"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:typeface="sans"
-        android:textStyle="bold"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image_icon_login"
         android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="SPOT MY LAUNDRY"
         android:textColor="@color/white"
-        android:layout_height="wrap_content" />
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
+
     <EditText
-        android:layout_below="@+id/textview_login_title"
         android:id="@+id/editText_username"
         android:layout_width="match_parent"
         android:layout_height="35dp"
+        android:layout_below="@+id/textview_login_title"
         android:layout_marginTop="20dp"
         android:background="@drawable/edittextstyle"
         android:ems="10"
@@ -84,12 +86,12 @@
         android:id="@+id/textView_new_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView_remember"
         android:layout_alignParentBottom="true"
+        android:layout_below="@+id/imageView_remember"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:padding="10dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/newuser"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white" />
 </RelativeLayout>
