--- a/app/src/main/res/layout/new_add_address.xml
+++ b/app/src/main/res/layout/new_add_address.xml
@@ -19,11 +19,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/imageView_banner"
-        android:background="#d3d3d3"
+        android:background="@color/btn_bgcolor_dark"
         android:padding="10dp"
         android:text="My Address"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/text_color" />
+        android:textColor="@color/white" />
 
     <ListView
         android:id="@+id/listView_laundry1"
@@ -31,11 +31,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/rel_bot_button"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="2dp"
-        android:divider="#00000000"
-        android:dividerHeight="2dp">
-
-    </ListView>
+        android:layout_marginTop="2dp"></ListView>
 
     <RelativeLayout
         android:id="@+id/rel_bot_button"
@@ -54,7 +50,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:background="@color/btn_bgcolor"
+            android:background="@drawable/button_selector"
             android:text="Add Address"
             android:textColor="@color/white" />
 
