--- a/app/src/main/res/layout/new_invoice_items.xml
+++ b/app/src/main/res/layout/new_invoice_items.xml
@@ -13,8 +13,7 @@
         android:layout_marginLeft="1dp"
         android:layout_marginRight="1dp"
         android:background="@drawable/bor_shape"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/item"
