--- a/app/src/main/res/layout/order_history.xml
+++ b/app/src/main/res/layout/order_history.xml
@@ -3,54 +3,53 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/order_listitem_back"
-    android:orientation="horizontal"
     android:layout_gravity="center"
+    android:background="@color/order_listitem_back"
     android:gravity="center"
-    android:paddingTop="10dp"
+    android:orientation="horizontal"
     android:paddingBottom="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="5dp"
-    >
+    android:paddingTop="10dp">
 
-        <TextView
-            android:paddingLeft="5dp"
-            android:id="@+id/textView1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:gravity="left|center_vertical"
-            android:text="5/3/15"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/text_color" />
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="6"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="5dp"
+        android:text="5/3/15"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/text_color" />
 
-        <TextView
-            android:paddingLeft="5dp"
-            android:id="@+id/textView2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:gravity="left|center_vertical"
-            android:text="xyz123"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/text_color" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="6"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="5dp"
+        android:text="xyz123"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/text_color" />
 
-        <TextView
-            android:paddingLeft="5dp"
-            android:id="@+id/textView3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:gravity="left|center_vertical"
-            android:text="60.00"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/text_color" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="6"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="5dp"
+        android:text="60.00"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/text_color" />
 
-        <ImageView
-            android:layout_weight="1"
-            android:id="@+id/imgView3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:src="@drawable/ic_action_arrow" />
+    <ImageView
+        android:id="@+id/imgView3"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:src="@drawable/ic_action_arrow" />
 </LinearLayout>
