--- a/app/src/main/res/menu/main1.xml
+++ b/app/src/main/res/menu/main1.xml
@@ -1,16 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.actionbar.MainActivity" 
-     android:background="@color/bgcolor_heading">
+    android:background="@color/bgcolor_heading"
+    tools:context="com.example.actionbar.MainActivity">
 
-   
-    
-     <item
+
+    <item
         android:id="@+id/edt_mySearch"
         android:title="My Music"
         app:actionLayout="@layout/search_bar"
-        app:showAsAction="always"/>
-  
-  
+        app:showAsAction="always" />
+
+
 </menu>
