--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,20 +4,20 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="bg">#e9e9e9</color>
-    
+
     <color name="topbar">#FEFCFF</color>
-    
-     <color name="bgcolor_heading">#004765</color>
-     <color name="btn_bgcolor">#076D99</color>
-    <color name="bgcolor">#FFFFFF  </color>
+
+    <color name="bgcolor_heading">#004765</color>
+    <color name="btn_bgcolor">#076D99</color>
+    <color name="bgcolor">#FFFFFF</color>
     <color name="text_color">#000000</color>
-    <color name="hint_color">#d3d3d3 </color>
-     <color name="edit_text_text">#333333</color>
-     <color name="edit_text_background">#34DADA</color>
-     <color name="text_view">#FFFFFF</color>
-     <color name="title">#FFFFFF</color>
-      <color name="button_title_color">#FFFFFF</color>
-     <color name="list_background">#0AA5A1</color>
+    <color name="hint_color">#d3d3d3</color>
+    <color name="edit_text_text">#333333</color>
+    <color name="edit_text_background">#34DADA</color>
+    <color name="text_view">#FFFFFF</color>
+    <color name="title">#FFFFFF</color>
+    <color name="button_title_color">#FFFFFF</color>
+    <color name="list_background">#0AA5A1</color>
     <color name="list_background_pressed">#000000</color>
     <color name="list_item_title">#FFFFFF</color>
     <color name="list_divider">#33ffffff</color>
@@ -27,13 +27,14 @@
     <color name="topbar_back">#004765</color>
     <color name="drawer_backblue">#004765</color>
 
-<!--30th july 2015 Sandeep Rana-->
+    <!--30th july 2015 Sandeep Rana-->
     <!-- color is used when not pressed -->
     <color name="btn_bgcolor_dark">#004765</color>
     <!-- color is used for button face-->
     <color name="btn_bgcolor_light">#2196f3</color>
     <color name="background_deal_list">#2196f3</color>
-    <color name="actionbarcolor">#ffffffff</color> // actionbarcolor is hardcode in file BaseFragmentActivity.java Line no 183
+    <color name="actionbarcolor">#ffffffff</color>
+    // actionbarcolor is hardcode in file BaseFragmentActivity.java Line no 183
     <color name="order_listitem_back">#e3e3e3</color>
 
     <!-- Some light collors as utils-->
@@ -44,9 +45,16 @@
     <color name="light_5">#25ef08ff</color>
     <color name="light_6">#11aaff00</color>
     <color name="light_grey">#f6f6f6</color>
-    <color name="order_history_back_grey">#ffffff</color><!-- Please go to file strings.java (variable light_grey line no. 102) Order_history.java to edit the background color of the order history-->
-    <color name="check">#2192b0</color>
+    <color name="order_history_back_grey">#ffffff</color>
+    <!-- Please go to file strings.java (variable light_grey line no. 102) Order_history.java to edit the background color of the order history-->
+    <string name="check">#ff208da9</string>
     <!-- 1 Aug 2015-->
     <color name="topbar_light_pressed">#2196f3</color>
+    <color name="b_img_pressed">#27a8cb</color>
 
+    <color name="b_img_unpressed">#076D99</color>
+    <color name="testing">#208da9</color>
+    <color name="red">#ff0000</color>
+    <color name="dark_grey">#959595</color>
+    <color name="darkest_grey">#7c7c7c</color>
 </resources>
