--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,8 @@
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-      
-       <style name="CustomActionBarTheme"
-           parent="@style/Theme.AppCompat.Light.DarkActionBar">
-           <item name="vpiTabPageIndicatorStyleMyMusic">@style/CustomTabPageIndicatorMyMusic</item>
+    <style name="CustomActionBarTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="vpiTabPageIndicatorStyleMyMusic">@style/CustomTabPageIndicatorMyMusic</item>
         <item name="actionBarStyle">@style/MyActionBar</item>
         <item name="actionModeBackground">@color/topbar_back</item>
 
@@ -12,17 +10,13 @@
     </style>
 
     <!-- ActionBar styles -->
-    <style name="MyActionBar"
-           parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">#00000000</item>
-
 
 
     </style>
 
-    
-    
-      
+
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
@@ -39,29 +33,28 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-    
-     <style name="StyledIndicators" parent="@android:style/Theme.Holo.Light.NoActionBar">
-       
+
+    <style name="StyledIndicators" parent="@android:style/Theme.Holo.Light.NoActionBar">
+
         <item name="vpiTabPageIndicatorStyleMyMusic">@style/CustomTabPageIndicatorMyMusic</item>
 
     </style>
 
-     <style name="CustomTabPageIndicatorMyMusic" parent="Widget.TabPageIndicator">
+    <style name="CustomTabPageIndicatorMyMusic" parent="Widget.TabPageIndicator">
         <item name="android:background">#007AAB</item>
         <!-- item name="android:background">#016B6B</item-->
         <!-- item name="android:background">@drawable/custom_tab_indicator_mymusic</item-->
-        
+
         <item name="android:textColor">@drawable/tab_text_color_mymusic</item>
         <item name="android:textSize">11sp</item>
         <item name="android:gravity">center</item>
     </style>
-  
-    
+
 
     <style name="CustomTabPageIndicator.Text" parent="android:TextAppearance.Medium">
         <item name="android:typeface">monospace</item>
     </style>
-    
+
     <!--  Transparent dialog -->
     <style name="TransparentProgressDialog" parent="Theme.AppCompat.Dialog">
         <item name="android:windowFrame">@null</item>
@@ -74,9 +67,19 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
-<style name="CustomSpinner" parent="Widget.AppCompat.Spinner">
-    <item name="android:background">@drawable/edittextstyle</item>
-    <item name="android:drawable">@drawable/dwnbtn</item>
-</style>
+
+    <style name="CustomSpinner" parent="Widget.AppCompat.Spinner">
+        <item name="android:background">@drawable/edittextstyle</item>
+        <item name="android:drawable">@drawable/dwnbtn</item>
+    </style>
+
+
+    <!-- Sandeep Rana 6 August 2015-->
+    <style name="Custom_style" parent="Widget.AppCompat.Spinner">
+        <item name="android:background">#2192b0</item>
+        <item name="android:popupBackground">#36cfff</item>
+        <item name="android:textColor">#208da9</item>
+        <item name="android:radius">3dp</item>
+    </style>
 
 </resources>
