--- a/app/src/main/res/layout/review_row.xml
+++ b/app/src/main/res/layout/review_row.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/white_buttonstyle"
-    android:padding="5dp">
+    android:padding="10dp">
 
 
     <RelativeLayout
@@ -11,15 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="7dp">
+>
 
         <RelativeLayout
             android:id="@+id/linearLayout1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_star">
+            >
 
             <LinearLayout
                 android:id="@+id/layout_star"
@@ -38,13 +36,20 @@
             android:layout_below="@+id/linearLayout1"
             android:layout_marginTop="4dp">
 
-            <LinearLayout
-                android:id="@+id/layout_star"
+            <TextView
+                android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@+id/textView12">
+                android:layout_alignParentLeft="true"
+                android:text="Uset Name"
+                android:textColor="#000000"
+                android:textSize="13sp" />
+            <LinearLayout
+                android:layout_alignParentRight="true"
+                android:id="@+id/lin_layout_star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true">
 
                 <ImageView
                     android:id="@+id/imageView_star1"
@@ -82,18 +87,10 @@
                     android:visibility="visible" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:text="Uset Name"
-                android:textColor="#000000"
-                android:textSize="13sp" />
         </RelativeLayout>
 
         <TextView
+            android:layout_alignParentBottom="true"
             android:id="@+id/textView_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -108,12 +105,10 @@
         android:id="@+id/textView_review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/relativeLayout1"
-        android:layout_alignRight="@+id/relativeLayout1"
-        android:layout_below="@+id/relativeLayout1"
-        android:layout_marginTop="4dp"
+        android:layout_alignParentLeft="true"
         android:paddingBottom="7dp"
-        android:text="review"
+        android:layout_below="@+id/relativeLayout1"
+        android:text="review jhdfjhjdkh"
         android:textColor="#000000"
         android:textSize="12sp" />
 
