--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
         android:layout_height="35dp"
         android:layout_below="@+id/textview_login_title"
         android:layout_marginTop="20dp"
-        android:background="@drawable/edittextstyle"
+        android:background="@drawable/edit_textplain_round"
         android:ems="10"
         android:hint="@string/emailaddress"
         android:inputType="textEmailAddress"
@@ -51,7 +51,7 @@
         android:layout_below="@+id/editText_username"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="@drawable/edittextstyle"
+        android:background="@drawable/edit_textplain_round"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
