--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/splash_back"
+    android:background="@drawable/back3"
     android:gravity="center"
     android:padding="40dp">
 
@@ -28,7 +28,7 @@
         android:gravity="center|bottom"
         android:text="@string/spot_mylaundry"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/white"
+        android:textColor="@color/btn_bgcolor"
         android:textStyle="bold" />
 
 
