--- a/app/src/main/res/layout/fragmrnt_activity_main.xml
+++ b/app/src/main/res/layout/fragmrnt_activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_height="fill_parent"
     android:background="@drawable/bg">
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
