--- a/app/src/main/res/layout/new_add_address.xml
+++ b/app/src/main/res/layout/new_add_address.xml
@@ -13,25 +13,25 @@
         android:background="@drawable/list_row_background1"
         android:scaleType="fitXY" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/imageView_banner"
-        android:background="@color/btn_bgcolor_dark"
-        android:padding="10dp"
-        android:text="My Address"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/white" />
+    <!--<TextView-->
+        <!--android:id="@+id/textView1"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_below="@+id/imageView_banner"-->
+        <!--android:background="@color/btn_bgcolor_dark"-->
+        <!--android:padding="10dp"-->
+        <!--android:text="My Address"-->
+        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+        <!--android:textColor="@color/white" />-->
 
     <ListView
         android:id="@+id/listView_laundry1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/rel_bot_button"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="2dp"></ListView>
+        android:layout_below="@+id/imageView_banner"
+        android:layout_marginTop="2dp"/>
 
     <RelativeLayout
         android:id="@+id/rel_bot_button"
