--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -11,7 +11,7 @@
     <color name="btn_bgcolor">#076D99</color>
     <color name="bgcolor">#FFFFFF</color>
     <color name="text_color">#000000</color>
-    <color name="hint_color">#d3d3d3</color>
+    <color name="hint_color">#959595</color>
     <color name="edit_text_text">#333333</color>
     <color name="edit_text_background">#34DADA</color>
     <color name="text_view">#FFFFFF</color>
@@ -57,4 +57,10 @@
     <color name="red">#ff0000</color>
     <color name="dark_grey">#959595</color>
     <color name="darkest_grey">#7c7c7c</color>
+
+
+    <color name="color_filledstar">#f1c40f</color> //check strings.xml this is just for annotation
+    <color name="color_emptystar">#77000000</color> //check strings.xml this is just for annotation
+
+    <color name="text_color_grey">#777777</color>
 </resources>
