--- a/app/src/main/res/layout/new_edit_address.xml
+++ b/app/src/main/res/layout/new_edit_address.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     android:background="@color/bgcolor">
 
-    <ImageView
-        android:id="@+id/imageView_banner"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/list_row_background1"
-        android:scaleType="fitXY" />
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView_banner"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="70dp"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="0dp"-->
+        <!--android:background="@drawable/list_row_background1"-->
+        <!--android:scaleType="fitXY" />-->
 
     <ImageView
         android:id="@+id/imageView_small_banner"
@@ -23,12 +23,10 @@
 
     <ScrollView
         android:id="@+id/scrollView1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_height="wrap_content"
         android:layout_above="@+id/imageView_small_banner"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/imageView_banner"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         >
@@ -38,16 +36,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
-
-
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Address Title*"
+                android:text="ADDRESS TITLE*"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/text_color_grey_dark" />
 
             <EditText
                 android:id="@+id/AddressName"
@@ -68,9 +64,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Address*"
+                android:text="ADDRESS*"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/text_color_grey_dark" />
 
             <EditText
                 android:id="@+id/AddressLine1"
@@ -89,9 +85,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Landmark:"
+                android:text="LANDMARK:"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/text_color_grey_dark" />
 
             <EditText
                 android:id="@+id/AddressLine2"
@@ -132,9 +128,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="City *"
+                android:text="CITY *"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/text_color_grey_dark" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -155,9 +151,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Country *"
+                android:text="COUNTRY *"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/text_color_grey_dark" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -175,9 +171,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Contact *"
+                android:text="CONTACT *"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/text_color_grey_dark" />
 
             <EditText
                 android:id="@+id/ContactNo"
@@ -201,7 +197,7 @@
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Field marked with * are mandatory"
+                    android:text="NOTE:Field marked with * are mandatory"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/text_color" />
 
