--- a/app/src/main/res/layout/new_order_history.xml
+++ b/app/src/main/res/layout/new_order_history.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     android:background="@color/bgcolor">
 
-    <ImageView
-        android:id="@+id/imageView_banner"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/list_row_background1"
-        android:scaleType="fitXY" />
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView_banner"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="70dp"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="0dp"-->
+        <!--android:background="@drawable/list_row_background1"-->
+        <!--android:scaleType="fitXY" />-->
 
     <ImageView
         android:id="@+id/imageView_small_banner"
