--- a/app/src/main/res/layout/actionbarview.xml
+++ b/app/src/main/res/layout/actionbarview.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:orientation="horizontal"
     >
+
     <ImageView
-        android:paddingRight="0dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:src="@drawable/ic_title_app"
-        android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:paddingBottom="10dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:paddingTop="10dp"
+        android:src="@drawable/ic_title_app" />
     <TextView
-        android:singleLine="true"
-        android:layout_weight="4"
-        android:text="SPOT MY LAUNDRY"
         android:id="@android:id/title"
-        android:gravity="center_vertical"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/white"
         android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="4"
+        android:gravity="center_vertical"
+        android:singleLine="true"
+        android:text="SPOT MY LAUNDRY"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white" />
 
 
 </LinearLayout>
